tests/snapshots/examples_fixtures/type_system__failing__65_adt_nested_constructor_non_exhaustive.snap
---
source: tests/examples/examples_fixtures_snapshots.rs
---
Fixture: examples/type_system/failing/65_adt_nested_constructor_non_exhaustive.flx
== compile ==
failed (compile)
== diagnostics ==
error[E015]: Non-Exhaustive Match

Match is not exhaustive: 1 missing pattern.

  examples/type_system/failing/65_adt_nested_constructor_non_exhaustive.flx:39:5
   |
39 |     match w {
   |     ^^^^^^^^^
40 |         Boxed(OkI(v)) -> v,
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^
41 |         Empty -> 0,
   | ^^^^^^^^^^^^^^^^^^^
42 |     }
   | ^^^^^

Hint:
  Add the missing pattern(s) or an unguarded `_ -> ...` catch-all.
== stdout ==
<not executed>
